examples/test/testpolicy5261.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5261
  namespace: namespace291
spec:
  podSelector:
    matchLabels:
      key47: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value45
          key22: value31
          key30: value23
      podSelector:
        matchLabels:
          key25: value20
